W-16584126: missing `add-opens`